fix: breadcrumbs overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -543,7 +543,6 @@ a {
   justify-content: space-between;
   align-items: center;
   gap: 16px;
-  flex-wrap: wrap;
 }
 
 .wiki-toolbar--sticky {
